--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     },
     "dependencies": {
         "cross-env": "^5.2.1",
-        "node-sass": "^4.12.0"
+        "node-sass": "^4.12.0",
+        "scrollreveal": "^4.0.5"
     }
 }
